trying to style date input field to prevent mobile collapse

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -59,6 +59,9 @@ a:visited{
 	td{
 		vertical-align: bottom;
 	}
+	td.text-field-width{
+		width: 15vw;
+	}
 }
 
 .button-cell{
